Revision history for Perl extension Test::PostgreSQL.

{{$NEXT}}

1.26
    - Fix postgresql.conf test on PostgreSQL prior to 9.2

1.25
    - Don't continue to wait if Postgres PID has gone
    - Database seeding after startup
    - Allow writing custom postgresql.conf instead of always emptying it
    - Suppress "pg_ctl: could not start server" messages on stderr
    - More config options

1.24
    - Adds support for UNIX socket connections to PostgreSQL
    - Adds psql method to retrieve appropriate CLI parameters
    - Recognize devel PostgreSQL versions

1.23
    - Fix missing META files RT:121425
1.22
    - Add parentheses to all method keywords to deal with change in upstream F::P

1.21
    - If run as root in a Docker container, attempts to setuid before calling pg_ctl

1.20
    - Major refactor, including converting to Moo and improving error handling and reporting.
    - changes to help when stop is called during DESTROY RT#111181
    - Fix RT#110972 by not rel2abs-ing File::Temp objects
    - add backwards-compatibility code for deprecated global %Defaults

1.10
    - localise $? in DESTROY closes rt#107957
    - Increase portability in general and for Windows especially

1.05  Tue Sep 16 12:23:27 2014
    - Refactor how binaries are located on the path
    - Fix connection error when connecting too fast
    - fix POD

1.04  Fri Aug 15 15:27:53 2014
    - Support POSTGRES_HOME environment variable
    - Tweak author, copyright; upgrade license to Artistic 2.0

1.03  Thu Aug 14 16:02:52 2014
    - deadlock.t - Skip plan if we can't initialize postgresql
    - Add extra paths to postgresql, for BSDs

1.02  Wed Aug  6 13:49:25 2014
    - Back out lower-case Test::postgresql as it caused too many problems with CPAN indexer

1.01  Mon Aug  4 12:28:13 2014
    - Include lower-case Test::postgresql module as shim for users of that module to the new one

1.00  Wed Jul 09 11:30:00 2014
    - Use pure default Postgresql config as some package managers